Broken CSS plz fix.

--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -25,7 +25,7 @@ a:hover {
 
 html,
 body {
-  background: url(images/bg.jpg) no-repeat center center fixed !important; 
+  background: url(../img/home-bg.png) no-repeat center center fixed !important; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
